# phase2-bn254

./: .gitignore  Cargo.toml  README.md
bellman/: Cargo.toml  README.md
bellman/src/: batch_addition.rs  cs.rs  domain.rs  lib.rs  log.rs  multicore.rs  multiexp.rs  source.rs
bellman/src/gm17/: generator.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs
bellman/src/tests/: dummy_engine.rs
bellman/tests/: batch_addition.rs  mimc.rs
pairing/: Cargo.toml  README.md
pairing/benches/: pairing_benches.rs
pairing/benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
pairing/benches/bn256/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
pairing/src/: lib.rs
pairing/src/bls12_381/: ec.rs  fq12.rs  fq2.rs  fq6.rs
pairing/src/bn256/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs
pairing/tests/: batch_addition.rs
phase2/: Cargo.toml  README.md
phase2/src/: lib.rs  parameters.rs
powersoftau/: Cargo.toml  README.md  test.sh
powersoftau/examples/: verify.rs
