[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Alex Vlasov <alex.m.vlasov@gmail.com>", "Alex Gluchowski <alex@gluchowski.net"]
description = "zk-SNARK library"
documentation = "https://docs.rs/fawkes_crypto_bellman_ce"
homepage = "https://github.com/zeropoolnetwork/phase2-bn254"
license = "MIT/Apache-2.0"
name = "fawkes-crypto-zkbob-bellman_ce"
repository = "https://github.com/zeropoolnetwork/phase2-bn254"
version = "0.4.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
rand = "0.4"
bit-vec = "0.6.1"
cfg-if = "0.1.7"

pairing = {package = "fawkes-crypto-zkbob-pairing_ce", version = "0.19.0", path = "../pairing" }
byteorder = "1"

prefetch = {version = "0.2", optional = true}

web-sys = {version = "0.3.17", optional = true, features = ["console", "Performance", "Window"]}

tiny-keccak = {version = "2.0.2", optional = true}
blake2-rfc = {version = "0.2.18", optional = true}

# Multicore dependencies
crossbeam-channel = { version = "0.5.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4", optional = true }
num_cpus = { version = "1", optional = true }
rayon = { version = "1.5.1", optional = true }

[features]
multicore = ["crossbeam-channel", "lazy_static", "log", "num_cpus", "rayon"]
sonic = ["tiny-keccak", "blake2-rfc"]
gm17 = []
wasm = ["web-sys"]
nightly = ["prefetch"]
