[package]
name = "fawkes-crypto-pairing_ce"

# Remember to change version string in README.md.
version = "0.18.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/fawkes_crypto_pairing_ce/"
homepage = "https://github.com/zeropoolnetwork/phase2-bn254"
repository = "https://github.com/zeropoolnetwork/phase2-bn254"
edition = "2018"

[dependencies]
rand = "0.4"
byteorder = "1"
ff = {package = "ff_ce", version = "0.7", features = ["derive"]}

[features]
expose-arith = []
default = []
